--- a/WebBot/index.html
+++ b/WebBot/index.html
@@ -10,7 +10,7 @@
     <script type="text/javascript">
       var chatroom = new window.Chatroom({
         //https://web-leo0liveira.cloud.okteto.net/
-        host: "http://localhost:5005",
+        host: "https://chatbot-leo0liveira.cloud.okteto.net/",
         title: "🤖 Botinho do Tempo - Um ChatBot Compass UOL",
         container: document.querySelector(".chat-container"),
         welcomeMessage: "Inicie a conversa, por favor.",
